<resources>
    <string name="app_name">nmedia</string>
    <string name="Hello">Nmedia!</string>
    <string name="avatar">Yor avatar</string>
    <string name="menu">Menu</string>
    <string name="likeButton">Like button</string>
    <string name="shareButton">Share button</string>
    <string name="viewsIcon">Views icon</string>
    <string name="menuRemove">Delete</string>
    <string name="postText">Post Text</string>
    <string name="descriptionPostLike">Description Post Like</string>
    <string name="emptyContent">Empty content</string>
    <string name="menuEdit">Edit</string>
    <string name="editMessage">Edit message</string>
    <string name="edit">Editt</string>
    <string name="chooserSharePost">Share post</string>
    <string name="errorEmptyContent">Empty content</string>
    <string name="addPost">Add post</string>
    <string name="descriptionPostSave">Post save</string>
    <string name="descriptionCancelPostSaves">Cancel</string>
    <string name="channel_remote_name">Channel remote name</string>
    <string name="channel_remote_description">Channel remote description</string>
    <string name="notification_user_liked">%1$s liked post %2$s</string>
    <string name="notification_new_post">%1$s published a new post:</string>
    <string name="google_play_unavailable">Google play unavailable</string>
    <string name="error_loading">Error loading</string>
    <string name="retry_loading">Retry loading</string>
    <string name="empty_posts">Empty posts</string>
    <string name="server_error">Server error %1$s</string>
    <string name="repeat_request_buttonText">Repeat request</string>
    <string name="newer_posts_button_text">to an new posts</string>
    <string name="menu_item_save">menu save</string>
    <string name="removePhoto_text">remove</string>
    <string name="ad">Ad</string>

    <!-- menu main items  -->
    <string name="sign_in_menu_item">sign in</string>
    <string name="sign_up_menu_item">sign up</string>
    <string name="sign_out_menu_item">sign out</string>

    <!-- SignInFragment text resources -->
    <string name="login_edit_text">login</string>
    <string name="password_edit_text">Password</string>
    <string name="enter_button">Enter</string>


</resources>