<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SignInFragment">


    <EditText
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:hint="@string/login_edit_text"
        android:layout_gravity="center"
        android:textStyle="italic|bold"
        android:layout_marginTop="200dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textStyle="bold|italic"
        android:layout_gravity="center"
        android:hint="@string/password_edit_text"/>

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="20dp"
        android:id="@+id/button_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/enter_button"/>

</LinearLayout>