<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatarSize"
        android:layout_height="@dimen/avatarSize"
        android:layout_marginBottom="@dimen/margin"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="210dp"
        tools:srcCompat="@sample/draw"
        android:contentDescription="@string/avatar" />


    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_more_vert_24"
        tools:layout_editor_absoluteX="348dp"
        tools:layout_editor_absoluteY="8dp"
        android:contentDescription="@string/menu" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layout_constraintBottom_toTopOf="@id/barrier2"
        tools:text="@sample/posts.json/data/content">
    </TextView>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />

    <ImageButton
        android:id="@+id/like"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier2"
        android:layout_marginTop="@dimen/margin"
        app:srcCompat="@drawable/ic_baseline_favorite_24"
        tools:layout_editor_absoluteY="196dp"
        android:contentDescription="@string/likeButton" />

    <TextView
        android:id="@+id/likesCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/like"
        app:layout_constraintStart_toEndOf="@+id/like"
        app:layout_constraintTop_toTopOf="@+id/like"
        android:layout_marginStart="@dimen/marginFromButtons"
        tools:text="@sample/posts.json/data/like" />

    <ImageButton
        android:id="@+id/share"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toEndOf="@+id/likesCounter"
        app:layout_constraintTop_toBottomOf="@id/barrier2"
        android:background="@android:color/transparent"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        app:srcCompat="@drawable/ic_baseline_share_24"
        tools:layout_editor_absoluteY="185dp"
        android:contentDescription="@string/shareButton" />

    <TextView
        android:id="@+id/sharesCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/share"
        app:layout_constraintStart_toEndOf="@+id/share"
        app:layout_constraintTop_toTopOf="@+id/share"
        android:layout_marginStart="@dimen/marginFromButtons"
        tools:text="@sample/posts.json/data/share" />

    <ImageView
        android:id="@+id/views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/marginFromButtons"
        app:layout_constraintBottom_toBottomOf="@+id/viewsCounter"
        app:layout_constraintEnd_toStartOf="@+id/viewsCounter"
        app:layout_constraintTop_toTopOf="@+id/viewsCounter"
        app:srcCompat="@drawable/ic_baseline_visibility_24"
        android:contentDescription="@string/viewsIcon" />

    <TextView
        android:id="@+id/viewsCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier2"
        tools:text="@sample/posts.json/data/view" />


</androidx.constraintlayout.widget.ConstraintLayout>