<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardPost"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatarSize"
        android:layout_height="@dimen/avatarSize"
        android:layout_marginBottom="@dimen/ordinaryMargin"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@sample/draw"
        android:contentDescription="@string/avatar" />


    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ordinaryMargin"
        android:layout_marginEnd="@dimen/ordinaryMargin"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ordinaryMargin"
        android:layout_marginEnd="@dimen/ordinaryMargin"
        android:layout_marginBottom="@dimen/ordinaryMargin"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="@dimen/menuButtonSize"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ordinaryMargin"
        android:background="@android:color/transparent"
        app:icon="@drawable/ic_baseline_more_vert_24"
        app:iconGravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_more_vert_24"
        android:contentDescription="@string/menu" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ordinaryMargin"
        android:layout_marginBottom="@dimen/ordinaryMargin"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layout_constraintBottom_toTopOf="@id/mediaLayout"
        tools:text="@sample/posts.json/data/content">
    </TextView>

    <FrameLayout
        android:id="@+id/mediaLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:layout_constraintBottom_toTopOf="@id/barrier2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <VideoView
            android:id="@+id/videoPlayer"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:background="@android:color/transparent">
        </VideoView>

        <ImageButton
            android:id="@+id/playVideoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_play_24">
        </ImageButton>

    </FrameLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        tools:checked="true"
        tools:text="23"
        style="@style/AppCheckBox"
        app:iconPadding="@dimen/standardMargin"
        app:icon="@drawable/ic_favorite_selector"
        app:iconTint="@color/color_like"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ordinaryMargin"
        android:contentDescription="@string/likeButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier2" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AppCheckBox"
        tools:text="1234"
        app:icon="@drawable/ic_baseline_share_24"
        app:iconTint="@color/simpleGrey"
        app:iconPadding="@dimen/standardMargin"
        android:layout_marginStart="@dimen/standardMargin"
        android:layout_marginTop="@dimen/ordinaryMargin"
        android:background="@android:color/transparent"
        android:contentDescription="@string/shareButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintTop_toBottomOf="@id/barrier2"
        app:srcCompat="@drawable/ic_baseline_share_24" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/marginFromButtons"
        android:layout_marginTop="@dimen/ordinaryMargin"
        style="@style/AppCheckBox"
        android:clickable="false"
        app:icon="@drawable/ic_baseline_visibility_24"
        app:iconGravity="start"
        app:iconPadding="@dimen/standardMargin"
        tools:text="@sample/posts.json/data/view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier2"
        app:srcCompat="@drawable/ic_baseline_visibility_24"
        android:contentDescription="@string/viewsIcon" />




</androidx.constraintlayout.widget.ConstraintLayout>